--- a/app.html
+++ b/app.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.min.css" rel="stylesheet"> <!-- Локальный путь к Bootstrap CSS -->
     <title>Домашка</title>
     <style>
         * {
@@ -227,7 +228,7 @@
             <div class="product">Товар 3</div>
         </div>
     </div>
-
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script>
         const menuItems = document.querySelectorAll('.menu-item');
         const content = document.getElementById('content');
